--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -28,17 +28,33 @@ body { background: #0f0f0f; }
 /* b. Header Styles
 /* ------------------------------------------------------------------ */
 
-header {
+
+/* ------------------------------------------------------------------ */
+/* space animation
+/* ------------------------------------------------------------------ */
+
+.large-header {
    position: relative;
+   width: 100%;
    height: 800px;
    min-height: 500px;
-   width: 100%;
-   background: #161415 url(../images/header-background.jpg) no-repeat top center;
+   background: #ffffff;
+   overflow: hidden;
+   background-position: center center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
-   overflow: hidden;
+   z-index: 1;
 }
+
+.demo .large-header {
+   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
+}
+
+
+/* ------------------------------------------------------------------ */
+/* space animation end
+/* ------------------------------------------------------------------ */
 
 /* vertically center banner section */
 header:before {
@@ -51,7 +67,7 @@ header .banner {
    display: inline-block;
    vertical-align: middle;
    margin: 0 auto;
-   width: 85%;
+   width: 850%;
    padding-bottom: 30px;
    text-align: center;
 }
