--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -27,29 +27,22 @@ body { background: #0f0f0f; }
 /* ------------------------------------------------------------------ */
 /* b. Header Styles
 /* ------------------------------------------------------------------ */
-
+header {
+   position: relative;
+   height: 800px;
+   min-height: 500px;
+   width: 100%;
+   background: #161415 url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg") no-repeat top center;
+   background-size: cover !important;
+	-webkit-background-size: cover !important;
+   text-align: center;
+   overflow: hidden;
+}
 
 /* ------------------------------------------------------------------ */
 /* space animation
 /* ------------------------------------------------------------------ */
 
-.large-header {
-   position: relative;
-   width: 100%;
-   height: 800px;
-   min-height: 500px;
-   background: #ffffff;
-   overflow: hidden;
-   background-position: center center;
-   background-size: cover !important;
-	-webkit-background-size: cover !important;
-   text-align: center;
-   z-index: 1;
-}
-
-.demo .large-header {
-   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
-}
 
 
 /* ------------------------------------------------------------------ */
