--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -42,7 +42,15 @@ header {
 /* ------------------------------------------------------------------ */
 /* space animation
 /* ------------------------------------------------------------------ */
-
+.large-header {
+   position: relative;
+   width: 100%;
+   background: #111;
+   overflow: hidden;
+   background-size: cover;
+   background-position: center center;
+   z-index: 1;
+}
 
 
 /* ------------------------------------------------------------------ */
