--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+div.title {
+  font-family: 'Cabin Condensed', sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3%
+}
+
+svg.title {
+  font-weight: bold;
+  max-width: 600px;
+  height: auto;
+}
+
+#wave {
+  /* transform: scale(10, 10); */
+}
